tests/baselines/reference/MemberFunctionDeclaration8_es6.errors.txt
MemberFunctionDeclaration8_es6.ts(4,9): error TS2304: Cannot find name 'a'.
MemberFunctionDeclaration8_es6.ts(4,12): error TS1127: Invalid character.
MemberFunctionDeclaration8_es6.ts(4,14): error TS1109: Expression expected.
MemberFunctionDeclaration8_es6.ts(4,16): error TS2304: Cannot find name 'bar'.
MemberFunctionDeclaration8_es6.ts(5,12): error TS2304: Cannot find name 'bar'.


==== MemberFunctionDeclaration8_es6.ts (5 errors) ====
    class C {
      foo() {
        // Make sure we don't think of *bar as the start of a generator method.
        if (a) ¬ * bar;
            ~
!!! error TS2304: Cannot find name 'a'.
               ~
!!! error TS1127: Invalid character.
                 ~
!!! error TS1109: Expression expected.
                   ~~~
!!! error TS2304: Cannot find name 'bar'.
        return bar;
               ~~~
!!! error TS2304: Cannot find name 'bar'.
      }
    }